objects/MemberInteractionContactMtM__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <description>Created for CR-20150820-9171.</description>
        <formula>IF( 
	ISBLANK(Member_Interaction__c) ,
	IF (
		ISBLANK(Relationship_Interaction__c ) ,
		Research_Study_Interaction__r.Researcher__r.FirstName + &apos; &apos; +  Research_Study_Interaction__r.Researcher__r.LastName,
		Relationship_Interaction__r.Assigned_To__r.FirstName + &apos; &apos; + Relationship_Interaction__r.Assigned_To__r.LastName
	),
	Member_Interaction__r.Assigned_To__r.FirstName   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Created as part of CR-20140827-7155.</description>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Created as part of CR-20140827-7155.</description>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <description>Created as part of CR-20140827-7155.</description>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Interaction</relationshipLabel>
        <relationshipName>MemberInteractionContactMtM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interaction_Date__c</fullName>
        <description>Created for CR-20150820-9171.</description>
        <formula>IF( 
ISBLANK(Member_Interaction__c) , 
IF( 
ISBLANK( Relationship_Interaction__c ) , 
Research_Study_Interaction__r.Date_of_Interaction__c, 
DATEVALUE(Relationship_Interaction__r.Start_Date_Time__c) 
), 
Member_Interaction__r.Date_Time_Opened__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <description>Created for CR-20150820-9171.</description>
        <formula>IF( 
 ISBLANK(Member_Interaction__c) ,
 if(
  ISBLANK(Relationship_Interaction__c),
  Text(Research_Study_Interaction__r.Interaction_Type__c),
  Relationship_Interaction__r.Interaction_Type__c  
 ),
 Text(Member_Interaction__r.Interaction_Type__c)  
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_Current_Status__c</fullName>
        <description>Created as part of CR-6751</description>
        <formula>TEXT(Member_Interaction__r.Current_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MI Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_Record_Type__c</fullName>
        <description>Created as part of CR-6751.</description>
        <formula>Member_Interaction__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MI Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as per CR-6751</description>
        <label>Member Interaction</label>
        <referenceTo>Call__c</referenceTo>
        <relationshipLabel>MemberInteractionContactMtM</relationshipLabel>
        <relationshipName>MemberInteractionContactMtM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Created for CR-20150820-9171.</description>
        <formula>IF( 
	ISBLANK(Member_Interaction__c) ,
	IF (
		ISBLANK( Relationship_Interaction__c ) ,
		HYPERLINK(&quot;/&quot;+Research_Study_Interaction__r.Id , Research_Study_Interaction__r.Name) ,
		HYPERLINK(&quot;/&quot;+Relationship_Interaction__r.Id , Relationship_Interaction__r.Name) 
	),
	HYPERLINK(&quot;/&quot;+Member_Interaction__r.Id, Member_Interaction__r.Name)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Interaction</label>
        <referenceTo>Relationship_Interaction__c</referenceTo>
        <relationshipLabel>Interaction Attendees</relationshipLabel>
        <relationshipName>MemberInteractionContactMtM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_Study_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of CR-20140827-7155.</description>
        <label>Research Study Interaction</label>
        <referenceTo>Syndicated_Research_Interaction__c</referenceTo>
        <relationshipLabel>MemberInteractionContactMtM</relationshipLabel>
        <relationshipName>MemberInteractionContactMtM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MemberInteractionContactMtM</label>
    <nameField>
        <displayFormat>MIC-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MemberInteractionContactMtM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR_Validate_Contact_Interactions</fullName>
        <active>true</active>
        <description>Created for CR-20150820-9171.</description>
        <errorConditionFormula>OR( 
AND( 
NOT(ISBLANK(Member_Interaction__c)), 
NOT(ISBLANK(Relationship_Interaction__c)), 
NOT(ISBLANK(Research_Study_Interaction__c)) 
), 
AND( 
ISBLANK(Member_Interaction__c), 
ISBLANK(Relationship_Interaction__c), 
ISBLANK(Research_Study_Interaction__c) 
), 
AND( 
NOT(ISBLANK(Member_Interaction__c)), 
NOT(ISBLANK(Relationship_Interaction__c)), 
ISBLANK(Research_Study_Interaction__c) 
), 
AND( 
NOT(ISBLANK(Relationship_Interaction__c)), 
NOT(ISBLANK(Research_Study_Interaction__c)), 
ISBLANK(Member_Interaction__c) 
), 
AND( 
NOT(ISBLANK(Member_Interaction__c)), 
NOT(ISBLANK(Research_Study_Interaction__c)), 
ISBLANK(Relationship_Interaction__c) 
) 
)</errorConditionFormula>
        <errorMessage>A contact may only be tagged to one type of interaction.</errorMessage>
    </validationRules>
</CustomObject>